🎉auto update by Gmeek action

--- a/backup/数字信号处理学习记录.md
+++ b/backup/数字信号处理学习记录.md
@@ -1,1 +1,5 @@
-test
+# 常见基本信号（Signal and System)
+## 连续时间信号（Continuous-Time Signal）
+### 连续时间正弦信号（Continuous-Time Sinusoidal Signal）
+$x(t)=A\sin{(\omega_0 t+\phi)} , 式中A为振幅，\omega_0为频率，\phi为相位$
+## 离散时间信号（Discrete-Time Signal）
