🎉auto update by Gmeek action

--- a/backup/数字信号处理学习记录.md
+++ b/backup/数字信号处理学习记录.md
@@ -1,5 +1,9 @@
 # 常见基本信号（Signal and System)
 ## 连续时间信号（Continuous-Time Signal）
 ### 连续时间正弦信号（Continuous-Time Sinusoidal Signal）
+- 正弦信号定义式：
 $x(t)=A\sin{(\omega_0 t+\phi)} , 式中A为振幅，\omega_0为频率，\phi为相位$
+- 正弦信号周期：
+$$T_0=\frac{2\pi}{\omega_0}$$
+- **Time Shift t⇌ Phase Change**
 ## 离散时间信号（Discrete-Time Signal）
